# arta

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.arta
.github/workflows/: ci.yml  release.yml
examples/: battery_monitor.arta  cleanup.arta  container_basic.arta  container_export.arta  container_multi.arta  file_browser.arta  health_check.arta  process_monitor.arta
grammar/: arta.pest
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  mod.rs
src/container/: container.rs  manager.rs  mod.rs  types.rs
src/context/: mod.rs
src/engine/: executor.rs  mod.rs
src/engine/actions/: files.rs  mod.rs  process.rs
src/engine/queries/: battery.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  system.rs
src/life/: mod.rs
src/output/: formatter.rs  human.rs  json.rs  mod.rs
src/parser/: ast.rs  grammar.rs  mod.rs
src/repl/: interactive.rs  mod.rs
src/script/: mod.rs  runner.rs  validator.rs
src/security/: mod.rs  permissions.rs  validator.rs
